fix(mobile-home-header): resolved too large text

--- a/client/src/pages/home/Home.scss
+++ b/client/src/pages/home/Home.scss
@@ -26,7 +26,7 @@
                 font-size: 1rem;
                 --bs-nav-tabs-link-active-color: var(--HHPurple);
 
-                @media screen and (min-width: 352px){
+                @media screen and (min-width: 576px){
                     font-size: 1.4rem;
                     height: 60px;
                 }
